Added .json for vis1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="vis"></div>
 
 <script type="text/javascript">
-  var spec = "";
+  var spec = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/aus.geo.topojson.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
