--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 <div id="vis"></div>
 
 <script type="text/javascript">
-  var spec = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/aus.geo.topojson.json";
+  var spec = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
 </body>
 </html>
+
+<!--
+https://raw.githubusercontent.com/sachin-f/vis2/master/js/aus.geo.topojson.json
+
+-->
 
