Added 110m cultural data zipfile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <h1>Assignment 2 - Flights!</h1>
-<title>Flights</title>
+<title>Flights!</title>
 
     <!--Import Vega-Lite-->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
@@ -13,13 +13,13 @@
 <body>
 
 <div id="vis"></div>
-
 <script type="text/javascript">
   var spec = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
+
 </body>
 </html>
 
