--- a/index.html
+++ b/index.html
@@ -1,24 +1,74 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-<h1>Assignment 2 - Flights!</h1>
 <title>Flights!</title>
 
-    <!--Import Vega-Lite-->
+    <!--PureCSS-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!--Import Vega/Vega-Lite-->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="assets/departure.png"/>
 </head>
-<body>
 
-<div id="vis"></div>
+<body>
+<div class="header">
+  <img src="assets/departure.png">
+  <div class="header-text">
+    <h1>Flights!</h1>
+  </div>
+</div>
+
+
+
+<div class="page">
+  <div class="pure-g">
+      <div class="pure-u-1-3">
+        <div class="description description-left">
+          <h2>This is the first section</h2>
+          <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="vis1" class="vis-container"></div>
+      </div>
+    </div>
+
+  <div class="pure-g">
+    <div class="pure-u-2-3">
+      <div id="vis2" class="vis-container"></div>
+    </div>
+    <div class="pure-u-1-3">
+      <div class="description description-right">
+        <h2>This is the second section</h2>
+        <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript">
   var spec = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
-  vegaEmbed('#vis', spec).then(function(result) {
+
+  vegaEmbed('#vis1', spec, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+
+  vegaEmbed('#vis2', spec, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
+
+
 
 </body>
 </html>
