--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
 </div>
 
 <script type="text/javascript">
-  var spec = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
+  var spec1 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
 
-  vegaEmbed('#vis1', spec, {"actions": false}).then(function(result) {
+  vegaEmbed('#vis1', spec1, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  vegaEmbed('#vis2', spec, {"actions": false}).then(function(result) {
+  var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/bar.json";
+  vegaEmbed('#vis2', spec2, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
