--- a/index.html
+++ b/index.html
@@ -32,26 +32,28 @@
 
 <div class="page">
   <div class="pure-g">
-      <div class="pure-u-1-3">
-        <div class="description description-left">
-          <h2>This is the first section</h2>
-          <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
-        </div>
-      </div>
-      <div class="pure-u-2-3">
-        <div id="vis1" class="vis-container"></div>
-      </div>
-    </div>
-
-  <div class="pure-g">
-    <div class="pure-u-2-3">
-      <div id="vis2" class="vis-container"></div>
-    </div>
     <div class="pure-u-1-3">
-      <div class="description description-right">
-        <h2>This is the second section</h2>
+      <div class="description description-left">
+        <h2>This is the first section</h2>
         <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
       </div>
+    </div>
+    <div class="pure-u-2-3">
+      <div id="vis1" class="vis-container"></div>
+    </div>
+  </div>
+
+  <div class="pure-g">
+    <div class="pure-u-1-1">
+      <div id="vis2" class="vis-container"></div>
+    </div>
+    </div>
+  </div>
+
+  <div class="pure-g">
+    <div class="pure-u-1-1">
+      <div id="vis3" class="vis-container"></div>
+    </div>
     </div>
   </div>
 </div>
@@ -63,8 +65,13 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/bar.json";
+  var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/week10.json";
   vegaEmbed('#vis2', spec2, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+
+  var spec3 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/bar.json";
+  vegaEmbed('#vis3', spec3, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
