--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <div class="pure-g">
     <div class="pure-u-1-3">
       <div class="description description-left">
-        <h2>This is the first section</h2>
-        <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+        <h2>Airline Connections Domestic Australia</h2>
+        <p>Hover over the blue dots to see airline connections. </p>
       </div>
     </div>
     <div class="pure-u-2-3">
