--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
   </div>
 
   <div class="pure-g">
-    <div class="pure-u-1-1">
+    <div class="pure-u-2-1">
       <div id="vis2" class="vis-container"></div>
     </div>
+    <div class="pure-u-1-3">
+      <h2>Airport Stats for Melbourne Airport</h2>
+      <p>Hover over the bars to see exact values!</p>
     </div>
   </div>
 
@@ -65,7 +68,7 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/week10.json";
+  var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/bar_chart_pre.json";
   vegaEmbed('#vis2', spec2, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
