--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
   </div>
 
   <div class="pure-g">
-    <div class="pure-u-2-1">
+    <div class="pure-u-1-1">
+      Black line you see is the annotation. You need to change airport for it to work. Not sure why it is doing this.
       <div id="vis2" class="vis-container"></div>
     </div>
-    <div class="pure-u-1-3">
+<!--     <div class="pure-u-1-3">
       <h2>Airport Stats for Melbourne Airport</h2>
       <p>Hover over the bars to see exact values!</p>
-    </div>
+    </div> -->
   </div>
 
   <div class="pure-g">
@@ -69,7 +70,7 @@
   }).catch(console.error);
 
   var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/bar_chart_pre.json";
-  vegaEmbed('#vis2', spec2, {"actions": false}).then(function(result) {
+  vegaEmbed('#vis2', spec2, {"actions": true}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
