--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<title>Flights!</title>
+<title>Flights! | Dashboard</title>
 
     <!--PureCSS-->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
@@ -21,46 +21,41 @@
 </head>
 
 <body>
-<div class="header">
-  <img src="assets/departure.png">
-  <div class="header-text">
-    <h1>Flights!</h1>
-  </div>
-</div>
-
-
-
-<div class="page">
-  <div class="pure-g">
-    <div class="pure-u-1-3">
-      <div class="description description-left">
-        <h2>Airline Connections Domestic Australia</h2>
-        <p>Hover over the blue dots to see airline connections. </p>
+  <div class="container">
+    <div class = "header-container">
+      <div class="header">
+        <h1 class = "title">Flights!</h1>
+        <h2 class = "subtitle">a vis by Sachin Fernando</h2>
+        <div class="nav">
+          <a class="nav-element" href = "about.html">About</a>
+          <a class="nav-element" href = "report.html">Report</a>
+        </div>
       </div>
+    </div>  
+    <div class="line">
     </div>
-    <div class="pure-u-2-3">
-      <div id="vis1" class="vis-container"></div>
-    </div>
-  </div>
+    
+    <div class = "contents">
+      <div class="content-1">
+        <h2>Summary</h2>
+      </div>
 
-  <div class="pure-g">
-    <div class="pure-u-1-1">
-      Black line you see is the annotation. You need to change airport for it to work. Not sure why it is doing this.
-      <div id="vis2" class="vis-container"></div>
-    </div>
-<!--     <div class="pure-u-1-3">
-      <h2>Airport Stats for Melbourne Airport</h2>
-      <p>Hover over the bars to see exact values!</p>
-    </div> -->
-  </div>
+      <div class="content-2">
+        <h2>Vis 1</h2>
+        <div id="vis1" class="vis-container-1"></div>
+      </div>
 
-  <div class="pure-g">
-    <div class="pure-u-1-1">
-      <div id="vis3" class="vis-container"></div>
-    </div>
-    </div>
+      <div class="content-3">
+        <h2>Vis 2</h2>
+        <div id="vis2" class="vis-container-2"></div>
+      </div>
+
+      <div class="content-4">
+        <h2>Vis 3</h2>
+        <div id="vis3" class="vis-container-3"></div>
+      </div>
+     </div> 
   </div>
-</div>
 
 <script type="text/javascript">
   var spec1 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
@@ -79,8 +74,6 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
-
-
 
 </body>
 </html>
