--- a/index.html
+++ b/index.html
@@ -37,24 +37,51 @@
     
     <div class = "contents">
       <div class="content-1">
-        <h2>Summary</h2>
+        <h2>Intro - Can my storytelling technique be "Magazine Style"?</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nibh vel sapien convallis, et pellentesque libero tempor. Nam ac lorem non eros feugiat volutpat in eget orci. Suspendisse molestie, massa vitae consequat semper, lectus lacus lobortis elit, sit amet ornare dolor risus eu sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Donec tempus risus quis massa aliquam eleifend
+        </p>
       </div>
 
       <div class="content-2">
         <h2>Vis 1</h2>
-        <div id="vis1" class="vis-container-1"></div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nibh vel sapien convallis, et pellentesque libero tempor. Nam ac lorem non eros feugiat volutpat in eget orci. Suspendisse molestie, massa vitae consequat semper, lectus lacus lobortis elit, sit amet ornare dolor risus eu sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Donec tempus risus quis massa aliquam eleifend
+        </p>
+        <div id="vis1"></div>
       </div>
 
       <div class="content-3">
         <h2>Vis 2</h2>
-        <div id="vis2" class="vis-container-2"></div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nibh vel sapien convallis, et pellentesque libero tempor. Nam ac lorem non eros feugiat volutpat in eget orci. Suspendisse molestie, massa vitae consequat semper, lectus lacus lobortis elit, sit amet ornare dolor risus eu sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Donec tempus risus quis massa aliquam eleifend
+        </p>
+        <div id="vis2"></div>
       </div>
 
       <div class="content-4">
         <h2>Vis 3</h2>
-        <div id="vis3" class="vis-container-3"></div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nibh vel sapien convallis, et pellentesque libero tempor. Nam ac lorem non eros feugiat volutpat in eget orci. Suspendisse molestie, massa vitae consequat semper, lectus lacus lobortis elit, sit amet ornare dolor risus eu sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Donec tempus risus quis massa aliquam eleifend
+        </p>
+        <div id="vis3"></div>
       </div>
-     </div> 
+
+      <div class="content-5">
+        <h2>Summary</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nibh vel sapien convallis, et pellentesque libero tempor. Nam ac lorem non eros feugiat volutpat in eget orci. Suspendisse molestie, massa vitae consequat semper, lectus lacus lobortis elit, sit amet ornare dolor risus eu sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Donec tempus risus quis massa aliquam eleifend
+        </p>
+      </div>
+     </div>
+     
+     <div class="line"></div>
+     <div class="footer">
+      by Sachin Orson Fernando<br>
+      FIT3179: Data Visualisation<br>
+      Assignment 2<br>
+      2020
+     </div>
   </div>
 
 <script type="text/javascript">
@@ -65,7 +92,7 @@
   }).catch(console.error);
 
   var spec2 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/bar_chart_pre.json";
-  vegaEmbed('#vis2', spec2, {"actions": true}).then(function(result) {
+  vegaEmbed('#vis2', spec2, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
