added vis2 edit

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     
     <div class = "contents">
       <div class="content-1">
-        <h2>The effect of COVID-19 on the Aviation Industry in Australia</h2>
+        <h2>The Effect of COVID-19 on the Aviation Industry in Australia</h2>
         <p>
           COVID-19 has adversely affected many industries in Australia. The continuous lockdown of certain states and cities has had a great impact on Australia’s aviation industry. This dashboard gives the reader an opportunity to compare industry figures, before and after the outbreak began in Australia.
         </p>
       </div>
 
       <div class="content-2">
-        <h2>Passenger Movements Pre & Post COVID - Domestic Flights</h2>
+        <h2>Passenger Movements <mark class="blue">Pre</mark> & <mark class="red">Post</mark> COVID - Domestic Flights</h2>
         <p>
           The following vis shows total domestic passengers passing through an airport. Data from years 2015 to 2019 was averaged to find indicative values for 'Pre-COVID' times. Post-COVID figures (for 2020) are only avaliable up to August, which explains the missing values.
         </p>
@@ -52,7 +52,7 @@
       </div>
 
       <div class="content-3">
-        <h2>Passenger Movements Pre & Post COVID - International Flights</h2>
+        <h2>Passenger Movements <mark class="blue">Pre</mark> & <mark class="red">Post</mark> COVID - International Flights</h2>
         <p>
           The following vis shows total international passengers passing through an airport. Data from years 2015 to 2019 was averaged to find indicative values for 'Pre-COVID' times. Post-COVID figures (for 2020) are only avaliable up to August, which explains the missing values.
         </p>
@@ -80,7 +80,7 @@
       by Sachin Orson Fernando<br>
       FIT3179: Data Visualisation<br>
       Assignment 2<br>
-      2020
+      October 2020
      </div>
   </div>
 
@@ -97,7 +97,7 @@
   }).catch(console.error);
 
   var spec3 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
-  vegaEmbed('#vis3', spec3, {"actions": false}).then(function(result) {
+  vegaEmbed('#vis3', spec3, {"actions": true}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
