--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   }).catch(console.error);
 
   var spec3 = "https://raw.githubusercontent.com/sachin-f/vis2/master/js/vis1.json";
-  vegaEmbed('#vis3', spec3, {"actions": true}).then(function(result) {
+  vegaEmbed('#vis3', spec3, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
