--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       </div>
 
       <div class="content-4">
-        <h2>Vis 3</h2>
+        <h2>Australian Airports - Typical Traffic</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nibh vel sapien convallis, et pellentesque libero tempor. Nam ac lorem non eros feugiat volutpat in eget orci. Suspendisse molestie, massa vitae consequat semper, lectus lacus lobortis elit, sit amet ornare dolor risus eu sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Donec tempus risus quis massa aliquam eleifend
+          The following vis is an interactive network diagram which shows major domestic routes. The area of the airport marker is proportional to the total traffic it sees in a typical year (Pre-COVID). Please hover over the <mark class="blue">airport markers</mark> for more information!
         </p>
         <div id="vis3"></div>
       </div>
