--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
 
 <body>
   <div class="container">
-    <div class = "header-container">
+    <div class = "header-container">​
       <div class="header">
+        <img src="assets/plane.jpg">
         <h1 class = "title">Flights!</h1>
         <h2 class = "subtitle">a vis by Sachin Fernando</h2>
-        <div class="nav">
-          <a class="nav-element" href = "about.html">About</a>
-          <a class="nav-element" href = "report.html">Report</a>
-        </div>
       </div>
     </div>  
     <div class="line">
